# Space_Shooter

./: CMakeLists.txt  Отчет.docx.webarchive
build1/: CMakeCache.txt
build2/: CMakeCache.txt
build3/: ALL_BUILD.vcxproj  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build3/SpaceShooter.dir/Debug/SpaceShooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build3/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build4/: ALL_BUILD.vcxproj  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build4/SpaceShooter.dir/Debug/SpaceShooter.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SpaceShooter.lastbuildstate
build4/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build5/: ALL_BUILD.vcxproj  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build5/SpaceShooter.dir/Debug/SpaceShooter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  SpaceShooter.lastbuildstate
build5/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build6/: ALL_BUILD.vcxproj  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build6/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build7/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build8/: ALL_BUILD.vcxproj  CMakeCache.txt  SpaceShooter.sln  SpaceShooter.vcxproj  SpaceShooter.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build8/Debug/: highscores.txt
build8/SpaceShooter.dir/Debug/: SpaceShooter.exe.recipe  SpaceShooter.ilk
src/: AUnit.class.cpp  Animal.class.cpp  Animal.class.hpp  Background.class.cpp  Background.class.hpp  Fireball.class.cpp  Fireball.class.hpp  Player.class.cpp  Player.class.hpp  SpaceShooter.hpp  main.cpp
(+45 files in other folders)
